Fix styling on mobile

--- a/style.css
+++ b/style.css
@@ -3,32 +3,48 @@ html {
   color: #eeeeee;
   text-align: center;
   font-family: monospace;
-  font-size: 3em;
-  margin-top: 1em;
-  font-size: 18px;
+  font-size: 16px;
   line-height: 150%;
+}
+
+body {
+  margin: .5em;
 }
 
 nav {
   display: flex;
   justify-content: center;
+  flex-wrap: wrap;
 }
 
 nav a {
   color: #fff;
-  margin: 1em;
+  margin: 0em 1em;
+}
+
+h1 {
+  font-size: 30px;
+}
+
+h2 {
+  font-size: 24px;
+  margin: 1em 0 .2em 0;
 }
 
 section {
-  margin: 1em auto;
+  margin: 1em auto 3em auto;
   max-width: 800px;
   text-align: left;
 }
 
 p {
-  margin: 2em .5em;
+  margin: 1em .5em;
 }
 
 a {
   color: #f9a1f1;
+}
+
+footer {
+  margin: 3em auto 1em auto;
 }
